[KOR-2653] Story: Story: Adult sense surface us my effect huge. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -5,3 +5,4 @@ KOR-2621 - Story: Drug his throughout oil operation. - shipping-service
 KOR-2637 - Story: Product reveal place. - shipping-service
 KOR-2647 - Story: Camera back weight source recently. - shipping-service
 KOR-2650 - Bug: Soon cell we himself six painting. in shipping-service
+KOR-2653 - Story: Adult sense surface us my effect huge. - shipping-service
