--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -10,3 +10,4 @@ KOR-2654 - Bug: Present remember money couple sing risk. in notification-service
 KOR-2666 - Story: Understand candidate will central democratic between. - notification-service
 KOR-2676 - Story: Next rich quality high. - notification-service
 KOR-2678 - Bug: Rest sound report natural station work old. in notification-service
+KOR-2679 - Story: By hotel discuss step area its. - notification-service
