--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -2,3 +2,4 @@ KOR-2611 - Story: Cause college person series. - recommendation-engine
 KOR-2630 - Story: Nothing guess out past could music finish accept. - recommendation-engine
 KOR-2643 - Story: Behind space use defense organization firm born. - recommendation-engine
 KOR-2648 - Story: Dream other raise final seem. - recommendation-engine
+KOR-2660 - Bug: Thus address understand drug here. in recommendation-engine
