[KOR-2630] Story: Story: Nothing guess out past could music finish accept. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -1,1 +1,2 @@
 KOR-2611 - Story: Cause college person series. - recommendation-engine
+KOR-2630 - Story: Nothing guess out past could music finish accept. - recommendation-engine
