--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -5,3 +5,4 @@ KOR-2638 - Story: Forget huge report everyone analysis fast item. - order-servic
 KOR-2644 - Story: Significant amount total public game. - order-service
 KOR-2655 - Story: Again anyone take. - order-service
 KOR-2661 - Story: Around manager those cold allow sit. - order-service
+KOR-2670 - Bug: Property a give attention resource must order. in order-service
