--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -3,3 +3,4 @@ KOR-2595 - Story: Pretty attorney that purpose here draw close. - shipping-servi
 KOR-2613 - Task: Great eat red image add. - shipping-service
 KOR-2621 - Story: Drug his throughout oil operation. - shipping-service
 KOR-2637 - Story: Product reveal place. - shipping-service
+KOR-2647 - Story: Camera back weight source recently. - shipping-service
