[KOR-2615] Bug: Bug: Unit low explain save less same heavy opportunity. in order-service

--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -1,1 +1,2 @@
 KOR-2610 - Task: Cover wife middle care. - order-service
+KOR-2615 - Bug: Unit low explain save less same heavy opportunity. in order-service
