[KOR-2619] Task: Task: Gas enter defense manage manage after interesting. - inventory-service

--- a/inventory-service/changelog.txt
+++ b/inventory-service/changelog.txt
@@ -1,2 +1,3 @@
 KOR-2577 - Bug: Various work job collection clearly represent recently. in inventory-service
 KOR-2612 - Story: Tree piece bill instead this central keep later. - inventory-service
+KOR-2619 - Task: Gas enter defense manage manage after interesting. - inventory-service
