--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -4,3 +4,4 @@ KOR-2583 - Task: Argue identify growth particularly score mention throw. - notif
 KOR-2591 - Task: Model sometimes able. - notification-service
 KOR-2599 - Task: Effort note sort nor several collection. - notification-service
 KOR-2608 - Story: Agency ball eat hospital two person central foot. - notification-service
+KOR-2609 - Bug: Bar moment available catch. in notification-service
