--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -5,3 +5,4 @@ KOR-2635 - Story: Director coach rise memory. - frontend-web
 KOR-2668 - Task: Executive identify bed effort choose seat. - frontend-web
 KOR-2677 - Bug: Appear campaign easy parent. in frontend-web
 KOR-2681 - Bug: So night plant garden. in frontend-web
+KOR-2685 - Story: Discussion rather product chair wonder. - frontend-web
