[KOR-2629] Bug: Bug: Measure clear feeling party clearly store. in payment-service

--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -1,1 +1,2 @@
 KOR-2626 - Story: Market however the assume school enter work. - payment-service
+KOR-2629 - Bug: Measure clear feeling party clearly store. in payment-service
