--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -5,3 +5,4 @@ KOR-2640 - Story: Fear sit his generation yard edge. - payment-service
 KOR-2642 - Task: Measure memory employee reveal recognize rather indeed. - payment-service
 KOR-2651 - Story: Guess large house job many. - payment-service
 KOR-2671 - Story: Above during thought she evidence environment about. - payment-service
+KOR-2675 - Story: Model decade start decide trial find my. - payment-service
