[KOR-2585] Story: Story: Although process and a dark hot back. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -1,1 +1,2 @@
 KOR-2579 - Story: Choose trouble house say kind anyone pay college. - cart-service
+KOR-2585 - Story: Although process and a dark hot back. - cart-service
