[KOR-2650] Bug: Bug: Soon cell we himself six painting. in shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -4,3 +4,4 @@ KOR-2613 - Task: Great eat red image add. - shipping-service
 KOR-2621 - Story: Drug his throughout oil operation. - shipping-service
 KOR-2637 - Story: Product reveal place. - shipping-service
 KOR-2647 - Story: Camera back weight source recently. - shipping-service
+KOR-2650 - Bug: Soon cell we himself six painting. in shipping-service
