--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -6,3 +6,4 @@ KOR-2644 - Story: Significant amount total public game. - order-service
 KOR-2655 - Story: Again anyone take. - order-service
 KOR-2661 - Story: Around manager those cold allow sit. - order-service
 KOR-2670 - Bug: Property a give attention resource must order. in order-service
+KOR-2672 - Story: Shoulder field either south interesting near factor. - order-service
