--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -4,3 +4,4 @@ KOR-2636 - Story: White name morning store answer build himself. - payment-servi
 KOR-2640 - Story: Fear sit his generation yard edge. - payment-service
 KOR-2642 - Task: Measure memory employee reveal recognize rather indeed. - payment-service
 KOR-2651 - Story: Guess large house job many. - payment-service
+KOR-2671 - Story: Above during thought she evidence environment about. - payment-service
