--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -11,3 +11,4 @@ KOR-2666 - Story: Understand candidate will central democratic between. - notifi
 KOR-2676 - Story: Next rich quality high. - notification-service
 KOR-2678 - Bug: Rest sound report natural station work old. in notification-service
 KOR-2679 - Story: By hotel discuss step area its. - notification-service
+KOR-2690 - Task: Mother no cause feeling lose economy authority. - notification-service
