[KOR-2674] Story: Story: Bring little technology. - order-service

--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -7,3 +7,4 @@ KOR-2655 - Story: Again anyone take. - order-service
 KOR-2661 - Story: Around manager those cold allow sit. - order-service
 KOR-2670 - Bug: Property a give attention resource must order. in order-service
 KOR-2672 - Story: Shoulder field either south interesting near factor. - order-service
+KOR-2674 - Story: Bring little technology. - order-service
