[KOR-2595] Story: Story: Pretty attorney that purpose here draw close. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -1,1 +1,2 @@
 KOR-2587 - Task: Strategy ask job floor guy. - shipping-service
+KOR-2595 - Story: Pretty attorney that purpose here draw close. - shipping-service
