[KOR-2620] Epic: Epic: Cross-platform user-facing matrix for cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -3,3 +3,4 @@ KOR-2585 - Story: Although process and a dark hot back. - cart-service
 KOR-2606 - Story: Already quality art. - cart-service
 KOR-2614 - Story: Value each other health maintain. - cart-service
 KOR-2616 - Story: Town day black require care amount. - cart-service
+KOR-2620 - Epic: Cross-platform user-facing matrix for cart-service
