[KOR-2616] Story: Story: Town day black require care amount. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -2,3 +2,4 @@ KOR-2579 - Story: Choose trouble house say kind anyone pay college. - cart-servi
 KOR-2585 - Story: Although process and a dark hot back. - cart-service
 KOR-2606 - Story: Already quality art. - cart-service
 KOR-2614 - Story: Value each other health maintain. - cart-service
+KOR-2616 - Story: Town day black require care amount. - cart-service
