[KOR-2652] Task: Task: Point Democrat increase believe maybe need. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -9,3 +9,4 @@ KOR-2631 - Epic: Vision-oriented transitional superstructure for cart-service
 KOR-2632 - Task: American group last student decision senior. - cart-service
 KOR-2634 - Task: Image fast bring leave ground. - cart-service
 KOR-2645 - Task: Dream woman significant simple. - cart-service
+KOR-2652 - Task: Point Democrat increase believe maybe need. - cart-service
