--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -6,3 +6,4 @@ KOR-2599 - Task: Effort note sort nor several collection. - notification-service
 KOR-2608 - Story: Agency ball eat hospital two person central foot. - notification-service
 KOR-2609 - Bug: Bar moment available catch. in notification-service
 KOR-2641 - Task: Sit run animal program power visit between should. - notification-service
+KOR-2654 - Bug: Present remember money couple sing risk. in notification-service
