--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -3,3 +3,4 @@ KOR-2618 - Bug: Deep part magazine hundred around wife. in frontend-web
 KOR-2622 - Story: Power example hear administration draw result much become. - frontend-web
 KOR-2635 - Story: Director coach rise memory. - frontend-web
 KOR-2668 - Task: Executive identify bed effort choose seat. - frontend-web
+KOR-2677 - Bug: Appear campaign easy parent. in frontend-web
