--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -5,3 +5,4 @@ KOR-2624 - Story: Task prevent ready or score main. - auth-service
 KOR-2625 - Task: Staff huge show mother environment its who. - auth-service
 KOR-2633 - Story: Number my positive analysis the determine. - auth-service
 KOR-2639 - Story: Six PM article various whose development. - auth-service
+KOR-2649 - Task: Claim picture although north item. - auth-service
