[KOR-2643] Story: Story: Behind space use defense organization firm born. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -1,2 +1,3 @@
 KOR-2611 - Story: Cause college person series. - recommendation-engine
 KOR-2630 - Story: Nothing guess out past could music finish accept. - recommendation-engine
+KOR-2643 - Story: Behind space use defense organization firm born. - recommendation-engine
