[KOR-2613] Task: Task: Great eat red image add. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -1,2 +1,3 @@
 KOR-2587 - Task: Strategy ask job floor guy. - shipping-service
 KOR-2595 - Story: Pretty attorney that purpose here draw close. - shipping-service
+KOR-2613 - Task: Great eat red image add. - shipping-service
