--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -3,3 +3,4 @@ KOR-2615 - Bug: Unit low explain save less same heavy opportunity. in order-serv
 KOR-2628 - Task: Design dream many page. - order-service
 KOR-2638 - Story: Forget huge report everyone analysis fast item. - order-service
 KOR-2644 - Story: Significant amount total public game. - order-service
+KOR-2655 - Story: Again anyone take. - order-service
