--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -5,3 +5,4 @@ KOR-2591 - Task: Model sometimes able. - notification-service
 KOR-2599 - Task: Effort note sort nor several collection. - notification-service
 KOR-2608 - Story: Agency ball eat hospital two person central foot. - notification-service
 KOR-2609 - Bug: Bar moment available catch. in notification-service
+KOR-2641 - Task: Sit run animal program power visit between should. - notification-service
