--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -4,3 +4,4 @@ KOR-2593 - Task: Stay little music fly respond maybe offer. - product-service
 KOR-2601 - Story: Garden service try throughout throughout left worry. - product-service
 KOR-2646 - Story: Wind remember option who design. - product-service
 KOR-2659 - Story: Range ever pattern them. - product-service
+KOR-2665 - Task: Stage so big onto deep. - product-service
