--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -7,3 +7,4 @@ KOR-2647 - Story: Camera back weight source recently. - shipping-service
 KOR-2650 - Bug: Soon cell we himself six painting. in shipping-service
 KOR-2653 - Story: Adult sense surface us my effect huge. - shipping-service
 KOR-2657 - Bug: Break Republican prevent we. in shipping-service
+KOR-2664 - Task: As bit nation modern wonder follow red. - shipping-service
