--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -2,3 +2,4 @@ KOR-2575 - Bug: Staff board including reality speak. in product-service
 KOR-2589 - Story: Way high debate center center. - product-service
 KOR-2593 - Task: Stay little music fly respond maybe offer. - product-service
 KOR-2601 - Story: Garden service try throughout throughout left worry. - product-service
+KOR-2646 - Story: Wind remember option who design. - product-service
