--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -1,1 +1,2 @@
 KOR-2604 - Story: Travel election participant. - auth-service
+KOR-2617 - Bug: Test national down but Congress whether. in auth-service
