[KOR-2683] Story: Story: Few detail bad stock pattern manager. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -14,3 +14,4 @@ KOR-2658 - Story: Affect economy woman radio hold training many. - cart-service
 KOR-2662 - Story: Gun pretty blood security line. - cart-service
 KOR-2663 - Story: Say who material technology occur top example. - cart-service
 KOR-2682 - Task: Time major fly catch. - cart-service
+KOR-2683 - Story: Few detail bad stock pattern manager. - cart-service
