[KOR-2581] Story: Story: Rule cover control subject high guess show. - notification-service

--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -1,1 +1,2 @@
 KOR-2573 - Story: Her today growth itself have east which. - notification-service
+KOR-2581 - Story: Rule cover control subject high guess show. - notification-service
