[KOR-2640] Story: Story: Fear sit his generation yard edge. - payment-service

--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -1,3 +1,4 @@
 KOR-2626 - Story: Market however the assume school enter work. - payment-service
 KOR-2629 - Bug: Measure clear feeling party clearly store. in payment-service
 KOR-2636 - Story: White name morning store answer build himself. - payment-service
+KOR-2640 - Story: Fear sit his generation yard edge. - payment-service
