--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -8,3 +8,4 @@ KOR-2627 - Story: Give serve close doctor policy. - cart-service
 KOR-2631 - Epic: Vision-oriented transitional superstructure for cart-service
 KOR-2632 - Task: American group last student decision senior. - cart-service
 KOR-2634 - Task: Image fast bring leave ground. - cart-service
+KOR-2645 - Task: Dream woman significant simple. - cart-service
