[KOR-2606] Story: Story: Already quality art. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -1,2 +1,3 @@
 KOR-2579 - Story: Choose trouble house say kind anyone pay college. - cart-service
 KOR-2585 - Story: Although process and a dark hot back. - cart-service
+KOR-2606 - Story: Already quality art. - cart-service
