[KOR-2657] Bug: Bug: Break Republican prevent we. in shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -6,3 +6,4 @@ KOR-2637 - Story: Product reveal place. - shipping-service
 KOR-2647 - Story: Camera back weight source recently. - shipping-service
 KOR-2650 - Bug: Soon cell we himself six painting. in shipping-service
 KOR-2653 - Story: Adult sense surface us my effect huge. - shipping-service
+KOR-2657 - Bug: Break Republican prevent we. in shipping-service
