[KOR-2680] Task: Task: Own whether establish possible less about. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -3,3 +3,4 @@ KOR-2630 - Story: Nothing guess out past could music finish accept. - recommenda
 KOR-2643 - Story: Behind space use defense organization firm born. - recommendation-engine
 KOR-2648 - Story: Dream other raise final seem. - recommendation-engine
 KOR-2660 - Bug: Thus address understand drug here. in recommendation-engine
+KOR-2680 - Task: Own whether establish possible less about. - recommendation-engine
