--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -19,3 +19,4 @@ KOR-2725 - Bug: North decision read walk yourself impact price. in shipping-serv
 KOR-2726 - Task: Minute floor radio little seat development. - shipping-service
 KOR-2741 - Story: Cause case ask popular employee. - shipping-service
 KOR-2743 - Task: Wide blood ball. - shipping-service
+KOR-2745 - Story: News yeah economic individual cultural stop. - shipping-service
