--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -7,3 +7,4 @@ KOR-2659 - Story: Range ever pattern them. - product-service
 KOR-2665 - Task: Stage so big onto deep. - product-service
 KOR-2694 - Story: Garden you hand expert value. - product-service
 KOR-2705 - Story: Ahead live realize meet top. - product-service
+KOR-2711 - Epic: Horizontal reciprocal secured line for product-service
