[KOR-2723] Task: Task: Police grow present. - product-service

--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -10,3 +10,4 @@ KOR-2705 - Story: Ahead live realize meet top. - product-service
 KOR-2711 - Epic: Horizontal reciprocal secured line for product-service
 KOR-2721 - Story: Than surface board trade order. - product-service
 KOR-2722 - Task: Entire cell history who. - product-service
+KOR-2723 - Task: Police grow present. - product-service
