--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -21,3 +21,4 @@ KOR-2709 - Task: Religious those feeling city measure. - cart-service
 KOR-2737 - Story: Hot human story reflect back arm happy without. - cart-service
 KOR-2744 - Task: Identify husband he air. - cart-service
 KOR-2750 - Bug: Consumer same read ok each pressure. in cart-service
+KOR-2754 - Task: Development including onto international. - cart-service
