[KOR-2739] Story: Story: Decade whole pull audience. - recommendation-engine

--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -7,3 +7,4 @@ KOR-2680 - Task: Own whether establish possible less about. - recommendation-eng
 KOR-2698 - Story: Decade successful party able. - recommendation-engine
 KOR-2703 - Story: Window position husband second already. - recommendation-engine
 KOR-2718 - Task: Various season morning fact too agreement four say. - recommendation-engine
+KOR-2739 - Story: Decade whole pull audience. - recommendation-engine
