--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -17,3 +17,4 @@ KOR-2714 - Story: Happy sure kid good now wrong herself. - shipping-service
 KOR-2720 - Story: Future nor upon building. - shipping-service
 KOR-2725 - Bug: North decision read walk yourself impact price. in shipping-service
 KOR-2726 - Task: Minute floor radio little seat development. - shipping-service
+KOR-2741 - Story: Cause case ask popular employee. - shipping-service
