--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -10,3 +10,4 @@ KOR-2686 - Story: Budget phone major down experience let. - payment-service
 KOR-2724 - Epic: Innovative systemic matrix for payment-service
 KOR-2730 - Story: Heavy man economic wife seven board main. - payment-service
 KOR-2753 - Story: Necessary admit military open represent former. - payment-service
+KOR-2757 - Story: Also particularly out cultural push board. - payment-service
