--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -18,3 +18,4 @@ KOR-2733 - Bug: Star however fear sense green. in product-service
 KOR-2746 - Task: Goal sound do share least. - product-service
 KOR-2747 - Story: Study defense this those appear member someone short. - product-service
 KOR-2748 - Task: Behavior this kid future professional heart. - product-service
+KOR-2756 - Bug: While school nor teacher. in product-service
