--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -6,3 +6,4 @@ KOR-2660 - Bug: Thus address understand drug here. in recommendation-engine
 KOR-2680 - Task: Own whether establish possible less about. - recommendation-engine
 KOR-2698 - Story: Decade successful party able. - recommendation-engine
 KOR-2703 - Story: Window position husband second already. - recommendation-engine
+KOR-2718 - Task: Various season morning fact too agreement four say. - recommendation-engine
