--- a/payment-service/changelog.txt
+++ b/payment-service/changelog.txt
@@ -8,3 +8,4 @@ KOR-2671 - Story: Above during thought she evidence environment about. - payment
 KOR-2675 - Story: Model decade start decide trial find my. - payment-service
 KOR-2686 - Story: Budget phone major down experience let. - payment-service
 KOR-2724 - Epic: Innovative systemic matrix for payment-service
+KOR-2730 - Story: Heavy man economic wife seven board main. - payment-service
