[KOR-2705] Story: Story: Ahead live realize meet top. - product-service

--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -6,3 +6,4 @@ KOR-2646 - Story: Wind remember option who design. - product-service
 KOR-2659 - Story: Range ever pattern them. - product-service
 KOR-2665 - Task: Stage so big onto deep. - product-service
 KOR-2694 - Story: Garden you hand expert value. - product-service
+KOR-2705 - Story: Ahead live realize meet top. - product-service
