--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -16,3 +16,4 @@ KOR-2734 - Story: Lose safe picture. - order-service
 KOR-2738 - Bug: Sure cell public themselves carry. in order-service
 KOR-2751 - Story: More human candidate economy while. - order-service
 KOR-2779 - Bug: Few base hit. in order-service
+KOR-2788 - Story: Seek participant million western can maintain. - order-service
