--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -9,3 +9,4 @@ KOR-2694 - Story: Garden you hand expert value. - product-service
 KOR-2705 - Story: Ahead live realize meet top. - product-service
 KOR-2711 - Epic: Horizontal reciprocal secured line for product-service
 KOR-2721 - Story: Than surface board trade order. - product-service
+KOR-2722 - Task: Entire cell history who. - product-service
