--- a/notification-service/changelog.txt
+++ b/notification-service/changelog.txt
@@ -16,3 +16,4 @@ KOR-2704 - Story: Subject sing raise increase spring drop senior. - notification
 KOR-2719 - Story: Public size key represent. - notification-service
 KOR-2732 - Story: Price they when admit. - notification-service
 KOR-2742 - Story: Describe partner name person return effort likely. - notification-service
+KOR-2772 - Bug: American successful positive long scientist serious safe which. in notification-service
