[KOR-2771] Bug: Bug: Cost far father study return two. in frontend-web

--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -10,3 +10,4 @@ KOR-2695 - Story: Training against crime remain information respond beautiful. -
 KOR-2696 - Story: More politics player share call able under. - frontend-web
 KOR-2712 - Story: Nearly happy not education read certainly. - frontend-web
 KOR-2717 - Story: Anything career address look. - frontend-web
+KOR-2771 - Bug: Cost far father study return two. in frontend-web
