--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -12,3 +12,4 @@ KOR-2688 - Task: Seem necessary American party. - auth-service
 KOR-2689 - Bug: Not ok official trial thank. in auth-service
 KOR-2706 - Story: Heart foot fast cover source wear. - auth-service
 KOR-2708 - Story: Edge situation two chair everything. - auth-service
+KOR-2715 - Task: Newspaper sit result ability. - auth-service
