--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -19,3 +19,4 @@ KOR-2770 - Task: Power movement authority idea. - auth-service
 KOR-2775 - Story: Toward where recently write international. - auth-service
 KOR-2780 - Story: Choice appear fill real plant. - auth-service
 KOR-2781 - Story: Say will story such could. - auth-service
+KOR-2785 - Story: Bank apply same second tough water industry. - auth-service
