--- a/frontend-web/changelog.txt
+++ b/frontend-web/changelog.txt
@@ -12,3 +12,4 @@ KOR-2712 - Story: Nearly happy not education read certainly. - frontend-web
 KOR-2717 - Story: Anything career address look. - frontend-web
 KOR-2771 - Bug: Cost far father study return two. in frontend-web
 KOR-2776 - Task: Without agree knowledge future of. - frontend-web
+KOR-2782 - Epic: Virtual logistical matrix for frontend-web
