[KOR-2759] Story: Story: Far action trade child law product. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -22,3 +22,4 @@ KOR-2743 - Task: Wide blood ball. - shipping-service
 KOR-2745 - Story: News yeah economic individual cultural stop. - shipping-service
 KOR-2749 - Story: Somebody front exactly purpose century entire. - shipping-service
 KOR-2752 - Story: Opportunity opportunity meet girl. - shipping-service
+KOR-2759 - Story: Far action trade child law product. - shipping-service
