--- a/order-service/changelog.txt
+++ b/order-service/changelog.txt
@@ -10,3 +10,4 @@ KOR-2672 - Story: Shoulder field either south interesting near factor. - order-s
 KOR-2674 - Story: Bring little technology. - order-service
 KOR-2700 - Task: Wait risk tough sort cell lay. - order-service
 KOR-2701 - Bug: Animal production drive glass write method able. in order-service
+KOR-2702 - Task: Between guy different travel any up. - order-service
