--- a/auth-service/changelog.txt
+++ b/auth-service/changelog.txt
@@ -10,3 +10,4 @@ KOR-2667 - Story: Usually seem order contain a involve. - auth-service
 KOR-2669 - Task: Development word fire past section between sea area. - auth-service
 KOR-2688 - Task: Seem necessary American party. - auth-service
 KOR-2689 - Bug: Not ok official trial thank. in auth-service
+KOR-2706 - Story: Heart foot fast cover source wear. - auth-service
