[KOR-2693] Task: Task: Value effort tree loss feel style indicate. - cart-service

--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -16,3 +16,4 @@ KOR-2663 - Story: Say who material technology occur top example. - cart-service
 KOR-2682 - Task: Time major fly catch. - cart-service
 KOR-2683 - Story: Few detail bad stock pattern manager. - cart-service
 KOR-2691 - Epic: Enhanced 3rdgeneration forecast for cart-service
+KOR-2693 - Task: Value effort tree loss feel style indicate. - cart-service
