--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -17,3 +17,4 @@ KOR-2682 - Task: Time major fly catch. - cart-service
 KOR-2683 - Story: Few detail bad stock pattern manager. - cart-service
 KOR-2691 - Epic: Enhanced 3rdgeneration forecast for cart-service
 KOR-2693 - Task: Value effort tree loss feel style indicate. - cart-service
+KOR-2709 - Task: Religious those feeling city measure. - cart-service
