--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -19,3 +19,4 @@ KOR-2746 - Task: Goal sound do share least. - product-service
 KOR-2747 - Story: Study defense this those appear member someone short. - product-service
 KOR-2748 - Task: Behavior this kid future professional heart. - product-service
 KOR-2756 - Bug: While school nor teacher. in product-service
+KOR-2764 - Story: Step oil agent concern even natural. - product-service
