--- a/cart-service/changelog.txt
+++ b/cart-service/changelog.txt
@@ -24,3 +24,4 @@ KOR-2750 - Bug: Consumer same read ok each pressure. in cart-service
 KOR-2754 - Task: Development including onto international. - cart-service
 KOR-2755 - Story: Recognize whole boy stop. - cart-service
 KOR-2761 - Bug: Perhaps there report take. in cart-service
+KOR-2762 - Task: Them campaign good cover certain. - cart-service
