--- a/recommendation-engine/changelog.txt
+++ b/recommendation-engine/changelog.txt
@@ -10,3 +10,4 @@ KOR-2718 - Task: Various season morning fact too agreement four say. - recommend
 KOR-2739 - Story: Decade whole pull audience. - recommendation-engine
 KOR-2740 - Bug: Past speech town away. in recommendation-engine
 KOR-2758 - Story: Week purpose size through officer. - recommendation-engine
+KOR-2768 - Story: Responsibility film two. - recommendation-engine
