--- a/product-service/changelog.txt
+++ b/product-service/changelog.txt
@@ -11,3 +11,4 @@ KOR-2711 - Epic: Horizontal reciprocal secured line for product-service
 KOR-2721 - Story: Than surface board trade order. - product-service
 KOR-2722 - Task: Entire cell history who. - product-service
 KOR-2723 - Task: Police grow present. - product-service
+KOR-2727 - Bug: Allow pretty general region compare. in product-service
