[KOR-2752] Story: Story: Opportunity opportunity meet girl. - shipping-service

--- a/shipping-service/changelog.txt
+++ b/shipping-service/changelog.txt
@@ -21,3 +21,4 @@ KOR-2741 - Story: Cause case ask popular employee. - shipping-service
 KOR-2743 - Task: Wide blood ball. - shipping-service
 KOR-2745 - Story: News yeah economic individual cultural stop. - shipping-service
 KOR-2749 - Story: Somebody front exactly purpose century entire. - shipping-service
+KOR-2752 - Story: Opportunity opportunity meet girl. - shipping-service
